--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ entrypoints==0.3
 fake-useragent==0.1.11
 flake8==3.7.7
 Flask==1.0.3
+gunicorn==19.9.0
 idna==2.8
 isort==4.3.20
 itsdangerous==1.1.0
@@ -29,5 +30,3 @@ Unidecode==1.1.1
 urllib3==1.25.3
 Werkzeug==0.15.4
 wrapt==1.11.1
-
-# Generated with: pip freeze > filename.txt
